# math-sdk

./: .gitignore  .gitmodules  Makefile  README.md  RGS.md  main.py  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
calculations/: board.py  lines.py  statistics.py  symbol.py
carrotengine.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
config/: bet_mode.py  config.py  constants.py  distributions.py  optimisation_paramaters.py
docs/: fe_home.md  fe_readme.md  general_overview.md  home.md  index.md  math_home.md
docs/fe_assets/: fe_readme.md
docs/fe_docs/: context.md  dependencies.md  explore_sb.md  file_struct.md  flowchart.md  get_started.md  steps.md  ui.md
docs/gamestate_section/: events_info.md  force_info.md  repeat_info.md  win_info.md
docs/math_docs/: directory.md  general_overview.md  quickstart.md
docs/optimization_section/: optimization_algorithm.md
docs/overview_section/: game_format.md  game_struct.md  state_overview.md
docs/rgs_docs/: RGS.md
docs/sample_section/: sample_games.md
events/: event_constants.py  events.py
executables/: executables.py
optimization_program/: optimization_config.py  run_script.py
site/: 404.html  index.html  sitemap.xml
stakeEngine_mathSDK.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
state/: state.py  state_conditions.py
uploads/: .env  aws_classes.py  aws_constants.py  aws_upload.py
utils/: decompress_zstd.py  forcetool_ids.py  get_file_hash.py  rgs_verification.py  swap_lookups.py
write_data/: write_data.py
zuckengine.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+165 files in other folders)
