[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "Zuck"
dynamic = ["version"]
requires-python = ">=3.12"
dependencies = [
    "toml",
    "typing",
    "zstandard",
    "numpy"
]

description = "slot-game engine"
readme = "README.md"

[project.optional-dependencies] 
analysis = ["matplotlib", "xlsxwriter", "numpy", "pandas"]
upload = ["boto3", "botocore", "s3transfer", "python-dotenv", "python-env"]
